--- a/course/Cargo.toml
+++ b/course/Cargo.toml
@@ -3,11 +3,10 @@ name = "course"
 version = "0.1.0"
 authors = ["MajidKhan <mfmkpk1@gmail.com>"]
 edition = "2018"
-license = "MIT/Apache-2.0"
+license = "MIT"
 description = "sample library for understanding rust course"
 homepage = "https://github.com/majidIOTB3Islamabd/course"
 repository = "https://github.com/majidIOTB3Islamabd/course"
-readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
